tests/NormalTests/paczka1/fuzzy1/18769859.err
Error in line 2: aByH S126 34,0
Error in line 5: aByH A760 63,0
Error in line 6: aByH A198 29,1
Error in line 12: TvGzmkoZcey S126 50,8
Error in line 22: A816 A816 51,3
Error in line 18: 3gAMxWRv A816 5,0
Error in line 19: THY6ku A816 111,4
